[package]
name = "mars-trie"
version = "0.1.0"
authors = ["Johannes Muenzel <jmuenzel@gmail.com>"]

[dependencies]
log = "0.3.4"
quickcheck = "0.2.24"
rand = "0.3"

[dev-dependencies]
env_logger = "0.3"

[dependencies.fallthrough]
git = "https://github.com/pythonesque/fallthrough"
version = "0.0.1"

